refactor: project cleanup

--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -1,4 +1,4 @@
-{# templates/registration/register.html.twig #}
+{# templates/auth/register.html.twig #}
 {% extends 'base.html.twig' %}
 
 {% block title %}Register - Pathway+{% endblock %}
